# KlasterGoz_v2

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
apps/cluster/: README.md  apps.py  blocks.py  models.py
apps/guide/: README.md  apps.py  views.py  wagtail_hooks.py
apps/home/: README.md  apps.py  models.py
apps/pages/: README.md  apps.py  forms.py  models.py
apps/services/: README.md  apps.py  models.py
apps/shared/: README.md  apps.py  blocks.py  models.py  views.py
docs/przewodnik-moderatora/: 00-wprowadzenie.md  10-strona-glowna.md  12-o-klastrze.md  15-uslugi.md  20-filary.md  30-strony-statyczne.md  40-ustawienia.md
klastergoz/: asgi.py  urls.py  wsgi.py
klastergoz/settings/: base.py  dev.py  test.py
mockup/: aktualnosci.html  artykul.html  cookies.html  czlonkowie.html  doradztwo.html  edukacja.html  forum.html  gielda-uslug.html  index.html  klaster.html  kontakt.html  login.html  o-klastrze.html  oferta.html  partnerzy.html  projekty.html  regulamin.html  rodo.html  showroom.html  wydarzenia.html  zespol.html
mockup/akademia/: atb-vip.html  atb.html  att.html  harmonogram.html  kategoria.html  szkolenie.html  trenerzy.html
mockup/assets/: footer.html  header.html  include.js
mockup/oferta/: gogreen.html  knr-green.html  pro-goz.html  proeko.html  proinno.html
static/css/: styles.css
static/js/: hero-slider.js  main.js
templates/: base.html
templates/includes/: _picture.html  cookie_banner.html  footer.html  header.html  meta_tags.html
(+53 files in other folders)
