[project]
name = "klastergoz-portal"
version = "0.1.0"
description = "Portal marketingowy klastergoz.pl — Wagtail CMS"
requires-python = ">=3.12"
dependencies = [
    "wagtail>=6.3,<6.4",
    "django>=5.1,<5.2",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "django-redis>=5.4",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "black>=24.10",
    "pre-commit>=4.0",
    "factory-boy>=3.3",
    "model-bakery>=1.20",
]

[tool.uv]
package = false                # to nie jest publikowany pakiet

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "static", "media"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DJ"]   # E/F/W = pyflakes/pycodestyle; I = isort; UP = pyupgrade; B = bugbear; C4 = comprehensions; DJ = Django
ignore = ["E501"]               # długość linii — Black zarządza

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations|static|media"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "klastergoz.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "--reuse-db --tb=short"
